# Game-To-Finish

./: AssetsManager.hpp  CMakeLists.txt  Game.cpp  GameState.cpp  GameState.hpp  InputManager.hpp  MainMenuState.cpp  PauseMenuState.cpp  PauseMenuState.hpp  README.md  SETTINGS.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp
src/: AreaFourState.cpp  AreaFourState.hpp  AreaOneState.cpp  AreaOneState.hpp  AreaThreeState.cpp  AreaThreeState.hpp  AreaTwoState.cpp  AreaTwoState.hpp  AssetsManager.cpp  CollectibleObject.cpp  CollectibleObject.hpp  Game.cpp  Game.hpp  GameBorders.cpp  GameBorders.hpp  GameObject.cpp  GameObject.hpp  GameState.cpp  GameState.hpp  InputManager.cpp  MainMenuState.cpp  MainMenuState.hpp  PauseMenuState.cpp  PauseMenuState.hpp  PlayerObject.cpp  PlayerObject.hpp  SETTINGS.hpp  SplashState.cpp  SplashState.hpp  game_object.cpp  main.cpp  player_game_object.cpp  player_game_object.hpp
